--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@ body {
 	<p>Q: How do I download these?</p>
 	<p>A: We are working very hard to get these into the offical launcher and/or MultiMC.</p>
 	<p>Q: Why are you guys not releasing your versions as normal jar files!?</p>
-	<p>A: We can't, because that's illegal, and we don't want to get this project shut down.</p>
+	<p>A: We can't, because that's illegal.</p>
 </div>
 </body>
 
