--- a/contact.html
+++ b/contact.html
@@ -19,11 +19,12 @@ body {
 <div class="sideblur">
 </div>
 <div class="sidenav">
-  <a href="index.html">Home</a>
-  <a href="about.html">FAQ</a>
-  <a href="cf.html">Current Findings</a>
-  <a href="contact.html">Contact</a>
+  <a href="https://www.lostminecraftminers.org">Home</a>
+  <a href="https://www.lostminecraftminers.org/about">FAQ</a>
+  <a href="https://www.lostminecraftminers.org/cf">Current Findings</a>
+  <a href="https://www.lostminecraftminers.org/contact">Contact</a>
 </div>
+
 
 
 <div class="main">
