--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@ body {
 	<p>Q: How do I submit a version?</p>
 	<p>A: Join our discord from the contact page or email us from the email there.</p>
 	<p>Q: How do I download these?</p>
-	<p>A: We are working very hard to get these into the offical launcher and/or MultiMC.</p>
+	<p>A: We are working very hard with Mojang to get these into the offical Minecraft launcher.</p>
 	<p>Q: Why are you guys not releasing your versions as normal jar files!?</p>
 	<p>A: We can't, because that's illegal.</p>
 </div>
