--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body {
 <div class="main">
 	<h2>Lost Minecraft Miners</h2>
 	<p>We are the Lost Minecraft Miners:</p>
-	<p>A group of experts dedicated to mining deep into the internet and finding versions of Minecraft that are no longer available to download, and then crafting them up into something everyone can play. If you have a lost version and you'd like to send it in to us, please visit the Contact page and fill out the contact form. If you donate a version, then if you want to be credited for finding it, let us know and we would be happy to do so.</p>
+	<p>A group of experts dedicated to mining deep into the internet and finding versions of Minecraft that are no longer available to download, and then crafting them up into something everyone can play. If you have a lost version and you'd like to send it in to us, please visit the Contact page and send us an email from there. If you donate a version, then if you want to be credited for finding it, let us know and we would be happy to do so.</p>
 </div>
 </body>
 
