--- a/contact.html
+++ b/contact.html
@@ -31,8 +31,8 @@ body {
 	<h2>Lost Minecraft Miners</h2>
 	<p></p>
 	<p></p>
-	<a href="mailto:versions@lostminecraftminers.org">Click here to email us if you want to submit a version.</a>
-	<a href="mailto:contact@lostminecraftminers.org">Click here to email us if you have an issue.</a>
+	<a href="mailto:versions@lostminecraftminers.org">Click here to email us at versions@lostminecraftminers.org if you have a version you'd like to send in to the archive.</a>
+	<a href="mailto:contact@lostminecraftminers.org">Click here to email us at contact@lostminecraftminers.org if you wish to contact us for any other reason.</a>
 </div>
 </body>
 
