--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,7 @@ body {
   <a href="https://www.lostminecraftminers.org/about">FAQ</a>
   <a href="https://www.lostminecraftminers.org/cf">Current Findings</a>
   <a href="https://www.lostminecraftminers.org/contact">Contact</a>
+  <a href="https://www.lostminecraftminers.org/donate">Donate/Mine</a>
 </div>
 
 
