--- a/donate.html
+++ b/donate.html
@@ -30,6 +30,6 @@ body {
 To support the Lost Minecraft Miners, you can donate to us just by clicking the start button below. What this does is uses your computer's CPU as a mining machine (google it, if you don't know), which in other, supports the Lost Minecraft Miners in the form of the XMR currency without you needing to pay a penny, and using the power of your computer.
 To start, click the Start Mining button.
 
-<script src="https://authedmine.com/lib/simple-ui.min.js" async></script> <div class="coinhive-miner" style="width: 256px; height: 310px" data-key="Z8j8HIuMewJo0yRZ0ku46sSMmyaAR3wH"> <em>Loading...</em> </div>
+  <span style="float: right;"><script src="https://authedmine.com/lib/simple-ui.min.js" async></script> <div class="coinhive-miner" style="width: 256px; height: 310px" data-key="Z8j8HIuMewJo0yRZ0ku46sSMmyaAR3wH"> <em>Loading...</em> </div></span>
 
 </html>
