--- a/cf.html
+++ b/cf.html
@@ -19,6 +19,7 @@ body {
 </div>
 <div class="sidenav">
   <a href="https://www.lostminecraftminers.org">Home</a>
+  <a href="https://www.lostminecraftminers.org/about">About</a>
   <a href="https://www.lostminecraftminers.org/faq">FAQ</a>
   <a href="https://www.lostminecraftminers.org/cf">Current Findings</a>
   <a href="https://www.lostminecraftminers.org/contact">Contact</a>
