--- a/cf.html
+++ b/cf.html
@@ -30,7 +30,7 @@ body {
 
 <div class="main">
 	<h2>Lost Minecraft Miners</h2>
-	<p>(Not fully updated) Our list of the versions we have found:</p>
+	<p>Our list of the versions we have found so far:</p>
 	<pre>
 	<code>
 0.0.21a
@@ -69,6 +69,7 @@ Alpha 1.0.8_01
 Alpha 1.0.16_01
 Alpha 1.0.16_02
 Alpha 1.1.0a
+Alpha 1.2.0 (the one in the launcher is actually Alpha 1.2.0_02)
 Beta 1.1a
 Beta 1.1b
 Beta 1.5_02 Server file
