--- a/about.html
+++ b/about.html
@@ -33,6 +33,7 @@ body {
 <div class="main">
 	<h2>Lost Minecraft Miners</h2>
 	<p>We are the Lost Minecraft Miners, and we work to help restore the history of Minecraft  by finding lost versions, and placing them back in the launcher.</p>
+	<p>To see our list of found versions, click <a href="https://www.lostminecraftminers.org/cf">here</a>. To contact us, click <a href="https://www.lostminecraftminers.org/contact">here</a>.</p>
 </div>
 </body>
 
