--- a/cf.html
+++ b/cf.html
@@ -30,17 +30,17 @@ body {
 
 <div class="main">
 	<h2>Lost Minecraft Miners</h2>
-	<p>Our list of the versions we have found so far:</p>
+	<p>Our list of the lost client versions we have found so far (see below for servers):</p>
 	<pre>
 	<code>
-0.0.21a
-0.0.23a_01
-0.24 Resources Test
-0.27 Survival Test 10
-0.30 (Not to be confused with 0.30_01)
-0.28_01
-0.29_02
-Survival Test 0.30
+Classic 0.0.21a
+Classic 0.0.23a_01
+Classic 0.24 Resources Test
+Classic 0.27 Survival Test 10
+Classic 0.30 (Not to be confused with 0.30_01)
+Classic 0.28_01
+Classic 0.29_02
+Classic 0.30 Survival Test
 Minecraft 4K
 Indev January 11, 2010 (0.31)
 Indev January 24, 2010 (0.31)
@@ -72,7 +72,6 @@ Alpha 1.1.0a
 Alpha 1.2.0 (the launcher version is just Alpha 1.2.0_02)
 Beta 1.1a
 Beta 1.1b
-Beta 1.5_02 Server file
 Beta 1.7_01
 Beta 1.9-pre1
 Beta 1.9-pre2
@@ -84,6 +83,22 @@ Beta 1.9-pre6
 1.0.0 RC2
 1.9.1
 	</code>
+	</pre>
+	<p>Here is a list of the server versions we have found so far:</p>
+<pre>
+<code>
+Classic 0.0.19a_06
+Classic 0.30
+Alpha 0.1.0 (Client Alpha 1.0.15)
+Alpha 0.1.4 (Client Alpha 1.0.17)
+Server for Alpha 1.0.17_02 (Server name unknown)
+Server for Alpha 1.0.17_04 (Server name unknown)
+Alpha 0.2.0 (Client Alpha 1.1.0)
+Alpha 0.2.0_01 (Client Unknown)
+Alpha 0.2.6 (Client Alpha 1.2.4)
+Alpha 0.2.7 (Client Alpha 1.2.5)
+Alpha 0.2.8 (Client Alpha 1.2.6)
+        </code>
 	</pre>
 </div>
 </body>
