--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<b1>503 Service Unavailable</b1>
+<h1>503 Service Unavailable</h1>
 The server is currently under maintenence. Please come back later.
 </body>
 </html>
