--- a/cf.html
+++ b/cf.html
@@ -84,7 +84,7 @@ Beta 1.9-pre6
 1.9.1
 	</code>
 	</pre>
-	<p>Here is a list of the server versions we have found so far:</p>
+	<p>Here is a list of the lost server versions we have found so far:</p>
 <pre>
 <code>
 Classic 0.0.19a_06
