--- a/cf.html
+++ b/cf.html
@@ -98,6 +98,7 @@ Alpha 0.2.0_01 (Client Unknown)
 Alpha 0.2.6 (Client Alpha 1.2.4)
 Alpha 0.2.7 (Client Alpha 1.2.5)
 Alpha 0.2.8 (Client Alpha 1.2.6)
+Beta 1.5_02
         </code>
 	</pre>
 </div>
