--- a/cf.html
+++ b/cf.html
@@ -72,6 +72,7 @@ Alpha 1.1.0a
 Alpha 1.2.0 (the launcher version is just Alpha 1.2.0_02)
 Beta 1.1a
 Beta 1.1b
+Beta 1.6 Test Build 3
 Beta 1.7_01
 Beta 1.9-pre1
 Beta 1.9-pre2
