--- a/cf.html
+++ b/cf.html
@@ -20,6 +20,7 @@ body {
 <div class="sidenav">
   <a href="https://www.lostminecraftminers.org">Home</a>
   <a href="https://www.lostminecraftminers.org/about">About</a>
+  <a href="https://wiki.lostminecraftminers.org">Wiki</a>
   <a href="https://www.lostminecraftminers.org/faq">FAQ</a>
   <a href="https://www.lostminecraftminers.org/cf">Current Findings</a>
   <a href="https://www.lostminecraftminers.org/contact">Contact</a>
