Updated Current Findings

--- a/cf.html
+++ b/cf.html
@@ -30,10 +30,11 @@ body {
 
 <div class="main">
 	<h2>Lost Minecraft Miners</h2>
-	<p>Our list of the lost client versions we have found so far (see below for servers):</p>
+	<p>Our list of the lost client versions we have found so far as of April 4, 2018 (see below for servers):</p>
 	<pre>
 	<code>
 Classic 0.0.21a
+Classic 0.0.22a_05
 Classic 0.0.23a_01
 Classic 0.27 Survival Test 10
 Classic 0.30 (Not to be confused with 0.30_01)
@@ -46,6 +47,7 @@ Indev January 24, 2010 (0.31)
 Indev January 25, 2010 (0.31)
 Indev January 30, 2010 (0.31)
 Indev January 31, 2010 (0.31)
+Indev February 1, 2010 (0.31)
 Indev February 2, 2010 (0.31)
 Indev February 4, 2010 (0.31)
 Indev February 6, 2010
@@ -57,6 +59,7 @@ Indev February 18, 2010
 Indev February 19, 2010
 Indev February 23, 2010 (Final version of Indev)
 Infdev February 27, 2010 (First version of Infdev)
+Infdev March 27, 2010
 Infdev April 15, 2010
 Infdev April 20, 2010
 Infdev June 8, 2010
