--- a/faq.html
+++ b/faq.html
@@ -35,9 +35,7 @@ body {
 	<p>Q: How do I submit a version?</p>
 	<p>A: Join our discord from the contact page or email us from the email there.</p>
 	<p>Q: How do I download these?</p>
-	<p>A: You can't download them yet. We are now working with Mojang and Microsoft to get our lost versions back into the launcher, and they will be there in 2018.</p>
-	<p>Q: Why are you guys not releasing your versions as normal jar files!?</p>
-	<p>A: We can't, because that's illegal.</p>
+	<p>A: You can download our versions from our public archive (which will open soon), or the Minecraft launcher (which will also happen soon).</p>
 </div>
 </body>
 
