--- a/cf.html
+++ b/cf.html
@@ -32,49 +32,107 @@ body {
 	<h2>Lost Minecraft Miners</h2>
 	<p>Our list of the lost client versions we have found so far as of April 4, 2018 (see below for servers):</p>
 	<pre>
-	<code>
+	<code
+Classic 0.0.11a
+Classic 0.0.13a
+Classic 0.0.13a_03
 Classic 0.0.21a
 Classic 0.0.22a_05
 Classic 0.0.23a_01
-Classic 0.27 Survival Test 10
-Classic 0.30 (Not to be confused with 0.30_01)
+Classic 0.27 Survival Test
 Classic 0.28_01
 Classic 0.29_02
+Classic 0.30 (Not to be confused with 0.30_01)
 Classic 0.30 Survival Test
 Minecraft 4K
 Indev January 11, 2010 (0.31)
 Indev January 24, 2010 (0.31)
-Indev January 25, 2010 (0.31)
+Indev January 25, 2010 (1)(0.31)
+Indev January 25, 2010 (2) (0.31)
+Indev January 29, 2010 (0.31)
 Indev January 30, 2010 (0.31)
-Indev January 31, 2010 (0.31)
-Indev February 1, 2010 (0.31)
+Indev February 1, 2010 (1) (0.31)
+Indev February 1, 2010 (2) (0.31)
+Indev February 1, 2010 (3) (0.31)
 Indev February 2, 2010 (0.31)
-Indev February 4, 2010 (0.31)
-Indev February 6, 2010
-Indev February 12, 2010
-Indev February 12, 2010_02
-Indev February 14, 2010
-Indev February 14, 2010_02
+Indev February 3, 2010 (0.31)
+Indev February 7, 2010 (1)
+Indev February 7, 2010 (2)
+Indev February 12, 2010 (1)
+Indev February 12, 2010 (2)
+Indev February 14, 2010 (1)
+Indev February 14, 2010 (2)
 Indev February 18, 2010
 Indev February 19, 2010
 Indev February 23, 2010 (Final version of Indev)
 Infdev February 27, 2010 (First version of Infdev)
 Infdev March 27, 2010
+Infdev March 30, 2010
 Infdev April 15, 2010
 Infdev April 20, 2010
+Infdev June 7, 2010
 Infdev June 8, 2010
+Infdev June 18, 2010
+Infdev June 25, 2010 (1)
+Infdev June 25, 2010 (2)
 Infdev June 27, 2010
+Infdev June 29, 2010
 Alpha 1.0.1_01
+Alpha 1.0.4
+Alpha 1.0.5_01
 Alpha 1.0.7
 Alpha 1.0.8_01
+Alpha 1.0.11
+Alpha 1.0.14
+Alpha 1.0.15
+Alpha 1.0.16
 Alpha 1.0.16_01
-Alpha 1.0.16_02
+Alpha 1.0.17_02
+Alpha 1.0.17_04
 Alpha 1.1.0a
+Alpha 1.1.0b
 Alpha 1.2.0 (the launcher version is just Alpha 1.2.0_02)
+Alpha 1.2.1_01 (the launcher version is mislabeled as Alpha 1.2.1 but is actually just 1.2.1_01)
+Alpha 1.2.2a
+Alpha 1.2.2b
+Alpha 1.2.3
+Alpha 1.2.3_01
+Alpha 1.2.3_02
+Alpha 1.2.3_04
+Alpha 1.2.4_01
+Alpha 1.2.5
+Alpha 1.2.6
+Beta 1.0
+Beta 1.0_01
+Beta 1.0.2
 Beta 1.1a
 Beta 1.1b
+Beta 1.1_01
+Beta 1.1_02
+Beta 1.2
+Beta 1.2_01
+Beta 1.2_02
+Beta 1.3a
+Beta 1.3b
+Beta 1.3_01
+Beta 1.4
+Beta 1.4_01
+Beta 1.5
+Beta 1.5_01
+Beta 1.6
+Beta 1.6.1
+Beta 1.6.2
+Beta 1.6.3
+Beta 1.6.4
+Beta 1.6.5 
+Beta 1.6.6
 Beta 1.6 Test Build 3
+Beta 1.7
 Beta 1.7_01
+Beta 1.7.2
+Beta 1.7.3
+Beta 1.8
+Beta 1.8.1
 Beta 1.9-pre1
 Beta 1.9-pre2
 Beta 1.9-pre3
